--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           </form>
         </div>
         <div class="col-lg-3 align-self-center">
-          <img src="src/img/logo.jpg" alt="" class="hidden-md-down img-fluid rounded-circle">
+          <img src="src/img/logo-form.jpg" alt="" class="hidden-md-down img-fluid rounded-circle">
         </div>
       </div>
     </div>
