--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a href="#" class="navbar-brand"><img src="src/img/logo.jpg" alt="logo" width="50" height="50" class="img-fluid rounded-circle">
+      <a href="#" class="navbar-brand"><img src="src/img/logo.jpg" alt="logo" class="img-fluid rounded-circle">
       <h4 class= "d-inline align-middle">Mizuxe</h2>
       </a>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -321,7 +321,7 @@
           </form>
         </div>
         <div class="col-lg-3 align-self-center">
-          <img src="src/img/logo-form.jpg" alt="" class="hidden-md-down img-fluid rounded-circle">
+          <img src="src/img/logo-form.jpg" alt="logo" class="hidden-md-down img-fluid rounded-circle">
         </div>
       </div>
     </div>
