--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a href="#" class="navbar-brand"><img src="src/img/logo.jpg" alt="logo" class="img-fluid rounded-circle">
-      <h4 class= "d-inline align-middle">Mizuxe</h2>
+      <a href="#" class="navbar-brand">
+        <h4 class= "d-inline align-middle">Mizuxe</h2>
       </a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
