--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <a href="#" class="navbar-brand">
+        <img src="src/img/logo.png" alt="logo" width="50px" height="50px" class="img-fluid rounded-circle">
         <h4 class= "d-inline align-middle">Mizuxe</h2>
       </a>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -321,7 +322,7 @@
           </form>
         </div>
         <div class="col-lg-3 align-self-center">
-          <img src="src/img/logo-form.jpg" alt="logo" class="hidden-md-down img-fluid rounded-circle">
+          <img src="src/img/logo.png" alt="logo" class="hidden-md-down img-fluid rounded-circle">
         </div>
       </div>
     </div>
