--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <!--accordian-->
           <div id="accordian" role="tablist">
             <div class="card">
-              <div class="card-header" role="tab" id="heading1">
+              <div class="card-header bg-primary text-white" role="tab" id="heading1">
                 <h5 class="mb-0"></h5>
                 <div class="collaspsed"  href="#collapse1" data-toggle="collapse" data-parent="#accordian">
                   Get Inspired <i class="fa fa-arrow-circle-down"></i>
@@ -162,10 +162,10 @@
            <!--accordian-->
            <div id="accordian" role="tablist">
             <div class="card">
-              <div class="card-header" role="tab" id="heading3">
+              <div class="card-header bg-primary text-white" role="tab" id="heading3">
                 <h5 class="mb-0"></h5>
                 <div class="collaspsed" href="#collapse3" data-toggle="collapse" data-parent="#accordian">
-                  Get Inspired <i class="fa fa-arrow-circle-down"></i>
+                  Get Motivated <i class="fa fa-arrow-circle-down"></i>
                 </div>
               </div>
             </div>
